--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,1 @@
-.container{width:1320px;height:100%;margin:0 auto}body{width:100%;height:100%;font-family:Righteous;color:#fff}/*# sourceMappingURL=style.css.map */
+@import"https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Righteous&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap";.container{width:1320px;height:100%;margin:0 auto}body{width:100%;height:100%;font-family:Righteous;color:#fff}/*# sourceMappingURL=style.css.map */
