--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,49 @@
-@import"https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Righteous&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap";.container{width:1320px;height:100%;margin:0 auto}body{width:100%;height:100%;font-family:Righteous;color:#fff}/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Righteous&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
+.container {
+  width: 1320px;
+  height: 100%;
+  margin: 0 auto;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  font-family: Righteous;
+  color: #fff;
+  background-color: #14110E;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.header {
+  background-color: #1C1814;
+  height: 125px;
+  width: 100%;
+}
+.header__navigation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__navigation-list {
+  display: flex;
+  column-gap: 48px;
+}
+.header__navigation-link {
+  font-family: Inter;
+  font-size: 18px;
+}
+.header__navigation-link_active {
+  font-weight: 700;
+  color: #C99E71;
+  font-family: Inter;
+}
+
+/*# sourceMappingURL=style.css.map */
