--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -11,3 +11,25 @@
     width: $width;
     height: $height;
 }
+
+@mixin fontmixin($family, $weight, $size, $color, $line-height) {
+    @if ($family) {
+        font-family: $family;
+    }
+
+    @if ($weight) {
+        font-weight: $weight;
+    }
+
+    @if ($size) {
+        font-size: $size;
+    }
+
+    @if ($color) {
+        color: $color;
+    }
+
+    @if ($line-height) {
+        line-height: $line-height;
+    }
+}
