--- a/scss/blocks/header.scss
+++ b/scss/blocks/header.scss
@@ -1,25 +1,27 @@
 .header {
     background-color: $brown;
-    height: 125px;
     width: 100%;
+    height: 125px;
+
+
     &__navigation {
+        height: inherit;
         display: flex;
+        align-items: center;
 
         &-list {
             display: flex;
+            align-items: center;
+            border: 1px solid green;
             column-gap: 48px;
         }
 
         &-link {
-            font-family: Inter;
-            font-size: 18px;
+            @include fontmixin(Inter, null,18px, null, null);
 
             &_active {
-                font-weight: 700;
-                color: $lightbrown;
-                font-family: Inter;
+                @include fontmixin(Inter, null, 18px, $lightbrown, null);
             }
         }
-
     }
 }
